visibility issues

--- a/src/styles/intro&navbar.scss
+++ b/src/styles/intro&navbar.scss
@@ -61,7 +61,6 @@ header {
 
         h2 {
             color: rgb(223, 223, 223);
-            z-index: 9;
         }
         .break {
             position: relative;
